# omega_colony

./: .gitignore  Cargo.toml  README.md  pipeline.json
assets/: assets.txt  index.html
assets/fonts/: deadspace.json  orbitron.json
assets/maps/: ground.json  map.json  planet.json  tileset.json
assets/prefabs/: base.yaml  farm.yaml  intro.yaml  menu.yaml  panel.yaml  planet.yaml  selector.yaml  splash.yaml
assets/themes/: images.json  texts.json  ui.json
design/: colors.md  intro.txt  landscape.xcf  planet.xcf  stars.xcf  title.xcf
src/: lib.rs
src/components/: clickable.rs  flash.rs  grow.rs  interactive_sprite.rs  mod.rs  panel.rs  selector.rs  text_ani.rs
src/resources/: camera.rs  day.rs  mod.rs  player_stock.rs  referential.rs  selected.rs  selector.rs  stock.rs  time.rs  ui_widget.rs
src/states/: intro.rs  loading.rs  menu.rs  mod.rs  planet.rs  splash.rs
src/storage/: mod.rs  sto_utils.rs
src/systems/: builder_click.rs  camera_control.rs  day.rs  flash.rs  grow.rs  mod.rs  panel.rs  panel_click.rs  player_stock.rs  selector.rs  sprite_click.rs  text_ani.rs  time.rs
src/ui/: gui.rs  mod.rs
src/ui/components/: centered_text.rs  intro.rs  log_box.rs  menu.rs  menu_btn.rs  mod.rs  panel_cost.rs  panel_item.rs  panel_items.rs  res_item.rs  resource.rs  resources.rs  right_bar.rs  side_panel.rs  splash.rs  stars.rs  stock.rs  tab.rs  top_bar.rs
src/ui/gui/: gui_game.rs  gui_intro.rs  gui_menu.rs  gui_splash.rs  mod.rs
src/ui/screens/: splash.rs
