[package]
name = "omega_colony"
version = "0.1.0"
edition = "2018"
publish = false
description = "Omega Colony Game"
repository="https://github.com/TuntematonSotilas/omega_colony"
license="MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
web-sys = { version = "0.3.49", features = [
	"Window", 
	"Storage"
]}

[dependencies.oxygengine]
version = "0.20"
features = ["web-composite-game"]

